--- a/q4-sw1/page2.html
+++ b/q4-sw1/page2.html
@@ -18,7 +18,6 @@
    			background-repeat:no-repeat;
     		background-size:100% 100vh;
     		font-family: "Slackey", sans-serif;
-    		color: olive;
   		}
 
     	img {
@@ -27,29 +26,42 @@
     		margin: 10px;
 		}
 
-		span {
-			background: whitesmoke;
-			color: goldenrod;
-			font-size: 30px;
-			padding: 2px;
-		}
-
 		h1 {
 			color: crimson;
+		}
+
+		kbd {
+			color: crimson;
+			background: white;
 		}
 	</style>
 </head>
 
 <body><center>
-	<img src="https://static.wikia.nocookie.net/spongebob/images/0/03/Wet_Painters_085.jpg/revision/latest?cb=20150818012516" width="400">
-	<h1> Oh... </h1>
-	<p> A <span>100</span> Pesos only seems to be </p>
-	<h1> 1.77 USD </h1>
+	<img src="https://static.wikia.nocookie.net/spongebob/images/0/03/Wet_Painters_085.jpg/revision/latest?cb=20150818012516" width="200">
+
+	<script type="text/javascript">
+		document.write ("<h1> Oh... </h1>")
+		document.write ("<h3> <kbd>100</kbd> pesos only seems to be </h3>")
+	</script>
+
+	<h1><kbd>
+	<script type="text/javascript">
+		document.write (100*0.017)
+	</script>
+	</kbd></h1>
+
+	<script type=text/javascript>
+		document.write ("<h3> USD </h3>")
+	</script>
+
+	<br>
+	<br>
 
   	<div>
-		<a href="index.html" class="btn btn-light btn-lg"> Go back to Pesos... </a>
+		<a href="index.html" class="btn btn-light btn-sm"> Go back to Pesos... </a>
 		<br> <br> 
-		<a href="page3.html" class="btn btn-light btn-lg"> Let's Try Yen... </a>
+		<a href="page3.html" class="btn btn-light btn-sm"> Let's Try Yen... </a>
 	</div>
 </center></body>
 </html>
