--- a/q4-sw1/page3.html
+++ b/q4-sw1/page3.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>SW#1 - YEN</title>
+	<title>SW#1 - DOLLARS</title>
 
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
@@ -18,7 +18,6 @@
    			background-repeat:no-repeat;
     		background-size:100% 100vh;
     		font-family: "Slackey", sans-serif;
-    		margin: 10px;
   		}
 
     	img {
@@ -27,29 +26,42 @@
     		margin: 10px;
 		}
 
-		span {
-			background: whitesmoke;
-			color: goldenrod;
-			font-size: 30px;
-			padding: 2px;
-		}
-
 		h1 {
 			color: crimson;
+		}
+
+		kbd {
+			color: crimson;
+			background: white;
 		}
 	</style>
 </head>
 
 <body><center>
-	<img src="https://static.wikia.nocookie.net/spongebob/images/0/03/Wet_Painters_085.jpg/revision/latest?cb=20150818012516" width="400">
-	<h1> Wooh! </h1>
-	<p> A <span>100</span> Pesos seems to be </p>
-	<h1> 267.90 YEN </h1>
+	<img src="https://static.wikia.nocookie.net/spongebob/images/0/03/Wet_Painters_085.jpg/revision/latest?cb=20150818012516" width="200">
+
+	<script type="text/javascript">
+		document.write ("<h1> Nice! </h1>")
+		document.write ("<h3> <kbd>100</kbd> pesos only seems to be </h3>")
+	</script>
+
+	<h1><kbd>
+	<script type="text/javascript">
+		document.write (100*2.69)
+	</script>
+	</kbd></h1>
+
+	<script type=text/javascript>
+		document.write ("<h3> yen </h3>")
+	</script>
+
+	<br>
+	<br>
 
   	<div>
-		<a href="index.html" class="btn btn-light btn-lg"> Go back to Pesos... </a>
+		<a href="index.html" class="btn btn-light btn-sm"> Go back to Pesos... </a>
 		<br> <br> 
-		<a href="page2.html" class="btn btn-light btn-lg"> Let's Try Dollars... </a>
+		<a href="page3.html" class="btn btn-light btn-sm"> Let's Try Yen... </a>
 	</div>
 </center></body>
 </html>
